<resources>
    <string name="app_name">Mrgs Management App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create New Account?</string>
    <string name="login">Login</string>
    <string name="cont_disc">Logo</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="have_account">Already Have an Account?</string>
    <string name="planner">Planning</string>
    <string name="past_papers">Past Exam Papers</string>
    <string name="todolist">To Do List</string>
    <string name="remember_me">Remember me</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_forgot">ForgotActivity</string>
<!--    &lt;!&ndash; Strings used for fragments for navigation &ndash;&gt;-->
<!--    <string name="first_fragment_label">First Fragment</string>-->
<!--    <string name="second_fragment_label">Second Fragment</string>-->
<!--    <string name="next">Next</string>-->
<!--    <string name="previous">Previous</string>-->

    <string name="forgot_password_info">
        Forgot your password? Do not worry! Please enter your email address below!
    </string>

    <string name="forgot_password_info_2">
        We will send you a reset password link and you could simply click it to change your password!
    </string>

    <string name="reset_password">Reset Password</string>
    <string name="go_back">Return back to login page?</string>
</resources>